fixing search button on mobile (test)

--- a/css/monarch-common.css
+++ b/css/monarch-common.css
@@ -79,6 +79,13 @@ p {
     .navbar-brand {
         padding: 8px 5px 0px 20px;
     }
+    #search_form{
+        width:90%;
+    }
+    #search {
+        margin: 0 20px;
+        font-size: 13px;
+    }
 }
 @media (max-width: 768px) {
     .navbar-brand {
